--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "cookie": "^0.6.0",
+    "firebase": "^10.13.0",
+    "formik": "^2.4.6",
+    "framework7": "^8.3.3",
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.2.5",
+    "nodemailer": "^6.9.15",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.3.0",
+    "resend": "^4.0.0",
+    "simple-notify": "^1.0.4",
+    "sweetalert2": "^11.14.0",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
